--- a/tests/setup/db/mysql.cnf
+++ b/tests/setup/db/mysql.cnf
@@ -47,6 +47,7 @@ bulk_insert_buffer_size	= 16M
 sort_buffer_size				= 4M
 read_buffer_size				= 2M
 read_rnd_buffer_size			= 1M
+join_buffer_size 				= 16M
 max_connections					= 100
 innodb_flush_method				= O_DIRECT
 
@@ -55,8 +56,8 @@ innodb_flush_method				= O_DIRECT
 # tmp_table_size				= 1024M
 # myisam_sort_buffer_size 		= 512M
 # max_heap_table_size			= 1024M
-# innodb_buffer_pool_size 		= 1024M
-# innodb_buffer_pool_instances 	= 8 #(or 1 if innodb_buffer_pool_size < 1GB)
+# innodb_buffer_pool_size 		= 2G		# best min 1 GB, approximately 70 – 80% of the RAM available.
+# innodb_buffer_pool_instances 	= 2 		# or 1 if innodb_buffer_pool_size < 1GB
+# innodb_log_file_size 			= 512M 		# best 25% innodb_buffer_pool_size   https://haydenjames.io/mysql-server-has-gone-away-error-solutions/
 # innodb_additional_mem_pool_size = 1024M
-# innodb_log_file_size 			= 512M
 # innodb_log_buffer_size 		= 256M
