--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -58,6 +58,7 @@ jobs:
           composer_require_dev: false
           composer_ignore_platform_reqs: false
           security_analysis: true
+          report_file: results.sarif
 
       - name: Upload Security Analysis results to GitHub
         uses: github/codeql-action/upload-sarif@v1
