--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -1,14 +1,8 @@
 name: 'Code scanning - action'
 
 on:
-  push:
-    branches:
-      - developer
-  pull_request:
-    branches:
-      - developer
   schedule:
-    - cron: '0 14 * * 1'
+    - cron: '1 07 * * *'
 
 jobs:
   CodeQL-Build:
@@ -21,11 +15,6 @@ jobs:
           # We must fetch at least the immediate parents so that if this is
           # a pull request then we can checkout the head.
           fetch-depth: 2
-
-      # If this run was triggered by a pull request event, then checkout
-      # the head of the pull request instead of the merge commit.
-      - run: git checkout HEAD^2
-        if: ${{ github.event_name == 'pull_request' }}
 
       # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
@@ -52,3 +41,23 @@ jobs:
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v1
+
+  Code:
+    runs-on: ubuntu-latest
+    name: Static Code Analysis
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+
+      - name: Version
+        run: cat ${{github.workspace}}/config/version.php
+
+      - name: SonarCloud - Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          projectBaseDir: ${{github.workspace}}
