--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -61,3 +61,9 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           projectBaseDir: ${{github.workspace}}
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: javascript.zip
+          path: /home/runner/work/_temp/codeql_databases/javascript.zip
