--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -54,6 +54,11 @@ jobs:
       - name: Version
         run: cat ${{github.workspace}}/config/version.php
 
+      - name: PHP Security Checker
+        uses: StephaneBour/actions-php-security-checker@1.1
+        with:
+          composer-lock: './composer.lock'
+
       - name: SonarCloud - Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
@@ -61,6 +66,25 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           projectBaseDir: ${{github.workspace}}
+
+      # This workflow integrates ShiftLeft Scan with GitHub's code scanning feature
+      # ShiftLeft Scan is a free open-source security tool for modern DevOps teams
+      # Visit https://docs.shiftleft.io/shiftleft/scan/integrations/github-actions for help
+      - name: ShiftLeft Scan
+        uses: ShiftLeftSecurity/scan-action@master
+        env:
+          WORKSPACE: ''
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SCAN_AUTO_BUILD: true
+        with:
+          output: reports
+          # Scan auto-detects the languages in your project. To override uncomment the below variable and set the type
+          #type: php,javascript,json,nodejs,plsql,yaml,depscan
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: shiftleft-scan-reports
+          path: reports
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
