--- a/tests/setup/nginx/docker.conf
+++ b/tests/setup/nginx/docker.conf
@@ -14,7 +14,7 @@ server {
     include /etc/nginx/yetiforce.conf;
 
 	## Logs
-	error_log /var/log/nginx/localhost_error.log;
+	error_log /var/log/nginx/localhost_error.log warn;
 	access_log /var/log/nginx/localhost_access.log;
 
 	##########################
