--- a/tests/setup/nginx/nginx.conf
+++ b/tests/setup/nginx/nginx.conf
@@ -48,7 +48,7 @@ http {
     ##
 
     access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+    error_log /var/log/nginx/error.log warn;
 
     proxy_intercept_errors on;
     fastcgi_intercept_errors on;
