--- a/tests/setup/nginx/tests.conf
+++ b/tests/setup/nginx/tests.conf
@@ -2,46 +2,41 @@
 #  Best configuration for YetiForceCRM       #
 #  Created by m.krzaczkowski@yetiforce.com   #
 ##############################################
-
 # HTTP
 server {
-	listen 80;
-	server_name crm.example.com;
-	root /home/yfprod/html/public_html;
+	listen 80 default_server;
+	server_name localhost;
+	root /var/www/html/public_html;
 	index index.php index.html;
+    #return 301 https://$server_name$request_uri;
 
-	if ($host != $server_name) {
-		return 444;
-	}
-
-	## Logs
-	error_log /var/log/nginx/yfprod_http_error.log warn;
-	#access_log /var/log/nginx/yfprod_http_access.log;
-	access_log off;
-
-	return 301 https://$server_name$request_uri;
-}
-# HTTPS
-server {
-    listen 443 http2;
-	ssl on;
-	ssl_certificate /etc/nginx/ssl/_example.com.pem;
-	ssl_certificate_key /etc/nginx/ssl/_example.com.key;
-	ssl_dhparam /etc/nginx/ssl/dhparam.pem;
-	ssl_protocols  TLSv1.2 TLSv1.3;
-
-	server_name crm.example.com;
-	root /home/yfprod/html/public_html;
-    index index.php index.html;
-
-	if ($host != $server_name) {
-		return 444;
-	}
+	## Configuration for YetiForceCRM
+    include /etc/nginx/yetiforce.conf;
 
 	## Logs
-	error_log /var/log/nginx/yfprod_https_error.log;
-	#access_log /var/log/nginx/yfprod_https_access.log;
-	access_log off;
+	error_log /var/log/nginx/localhost_error.log warn;
+	access_log /var/log/nginx/localhost_access.log;
+
+    location /config {
+		error_log off;
+		access_log off;
+    }
+    location /cache {
+		error_log off;
+		access_log off;
+    }
+    location /app_data {
+		error_log off;
+		access_log off;
+    }
+    location /storage {
+		error_log off;
+		access_log off;
+    }
+    location /user_privileges {
+		error_log off;
+		access_log off;
+    }
 
 	##########################
 	##       SabreDAV       ##
@@ -53,7 +48,7 @@ server {
 		try_files $fastcgi_script_name = 404;
 		include /etc/nginx/fastcgi_params;
 		fastcgi_split_path_info ^(.+\.php)(.*)$;
-		fastcgi_pass unix:/run/php/yfprod.sock;
+		fastcgi_pass unix:/run/php/php-fpm.sock;
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 		fastcgi_param PATH_INFO        $fastcgi_path_info;
 		fastcgi_send_timeout 600;
@@ -63,6 +58,7 @@ server {
 		proxy_send_timeout 600;
 		proxy_read_timeout 600;
 	}
+
 	##########################
 	##          PHP         ##
 	##########################
@@ -70,7 +66,7 @@ server {
 		try_files $uri =404;
 		include /etc/nginx/fastcgi_params;
 		fastcgi_split_path_info ^(.+\.php)(/.+)$;
-		fastcgi_pass unix:/run/php/yfprod.sock;
+		fastcgi_pass unix:/run/php/php-fpm.sock;
 		fastcgi_index index.php;
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 		fastcgi_param PATH_INFO $fastcgi_path_info;
@@ -81,7 +77,4 @@ server {
 		proxy_send_timeout 600;
 		proxy_read_timeout 600;
 	}
-
-	## Configuration for YetiForceCRM
-	include /etc/nginx/yetiforce.conf;
 }
