--- a/public_html/api/Portal.yaml
+++ b/public_html/api/Portal.yaml
@@ -392,6 +392,18 @@ paths:
           required: true
           schema:
             $ref: '#/components/schemas/Header-Encrypted'
+        -
+          name: x-response-params
+          in: header
+          description: 'The header contains information about additional data to be returned in the response [Json array]'
+          required: false
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+                  enum: [inventory, blocks, privileges, dbStructure, queryOperators]
       responses:
         '200':
           description: 'Fields, blocks and inventory details'
