--- a/public_html/api/Portal.yaml
+++ b/public_html/api/Portal.yaml
@@ -2727,16 +2727,10 @@ components:
                 - fieldtype
                 - id
                 - uitype
-                - isEditable
-                - isViewable
-                - isReadOnly
-                - isEditableReadOnly
                 - sequence
                 - fieldparams
                 - blockId
                 - helpInfo
-                - dbStructure
-                - queryOperators
               type: object
               additionalProperties:
                 properties:
@@ -2765,23 +2759,24 @@ components:
                   formats: { title: 'File Format, available only for type of field: multiImage, image', properties: { jpg: { description: 'List of file data formats', example: jpg } }, type: object }
                   id: { description: 'Field ID', type: integer, example: 24862 }
                   uitype: { description: 'Field UiType', type: integer, example: 1 }
-                  isEditable: { description: 'Check if record is editable', type: boolean, example: true }
-                  isViewable: { description: 'Check if record is viewable', type: boolean, example: true }
-                  isReadOnly: { description: 'Check if record is read only (based on profiles)', type: boolean, example: false }
-                  isEditableReadOnly: { description: 'Check if record is editable or read only (based on the field type)', type: boolean, example: false }
+                  isEditable: { description: 'Check if the field is editable, depends on header `x-response-params`', type: boolean, example: true }
+                  isViewable: { description: 'Check if the field is viewable, depends on header `x-response-params`', type: boolean, example: true }
+                  isReadOnly: { description: 'Check if the field is read only (based on profiles), depends on header `x-response-params`', type: boolean, example: false }
+                  isEditableReadOnly: { description: 'Check if the field is editable or read only (based on the field type), depends on header `x-response-params`', type: boolean, example: false }
+                  isEditableHidden: { description: 'Check if the field is hidden in the edit (based on the field type), depends on header `x-response-params`', type: boolean, example: false }
                   sequence: { description: 'Sequence field', type: integer, example: 24862 }
                   fieldparams: { description: 'Field params', type: object }
                   blockId: { description: 'Field block id', type: integer, example: 280 }
                   helpInfo: { description: 'Additional field description', type: string, example: 'Edit,Detail' }
-                  dbStructure: { title: 'Info about field structure in database', properties: { name: { description: 'Name of this column (without quotes).', type: string, example: parent_id }, allowNull: { description: 'Whether this column can be null.', type: boolean, example: true }, type: { description: 'Abstract type of this column.', type: string, example: integer }, phpType: { description: 'The PHP type of this column.', type: string, example: integer }, dbType: { description: 'The DB type of this column.', type: string, example: int(10) }, defaultValue: { description: 'Default value of this column', type: string, example: '10' }, enumValues: { description: 'Enumerable values.', type: string, example: '' }, size: { description: 'Display size of the column.', type: integer, example: 10 }, precision: { description: 'Precision of the column data, if it is numeric.', type: integer, example: 10 }, scale: { description: 'Scale of the column data, if it is numeric.', type: integer, example: 0 }, isPrimaryKey: { description: 'Whether this column is a primary key', type: boolean, example: false }, autoIncrement: { description: 'Whether this column is auto-incremental', type: boolean, example: false }, unsigned: { description: 'Whether this column is unsigned.', type: boolean, example: false }, comment: { description: 'Comment of this column.', type: string, example: '' } }, type: object }
-                  queryOperators: { description: 'Field query operators', type: object }
+                  dbStructure: { title: 'Info about field structure in database, depends on header `x-response-params`', properties: { name: { description: 'Name of this column (without quotes).', type: string, example: parent_id }, allowNull: { description: 'Whether this column can be null.', type: boolean, example: true }, type: { description: 'Abstract type of this column.', type: string, example: integer }, phpType: { description: 'The PHP type of this column.', type: string, example: integer }, dbType: { description: 'The DB type of this column.', type: string, example: int(10) }, defaultValue: { description: 'Default value of this column', type: string, example: '10' }, enumValues: { description: 'Enumerable values.', type: string, example: '' }, size: { description: 'Display size of the column.', type: integer, example: 10 }, precision: { description: 'Precision of the column data, if it is numeric.', type: integer, example: 10 }, scale: { description: 'Scale of the column data, if it is numeric.', type: integer, example: 0 }, isPrimaryKey: { description: 'Whether this column is a primary key', type: boolean, example: false }, autoIncrement: { description: 'Whether this column is auto-incremental', type: boolean, example: false }, unsigned: { description: 'Whether this column is unsigned.', type: boolean, example: false }, comment: { description: 'Comment of this column.', type: string, example: '' } }, type: object }
+                  queryOperators: { description: 'Field query operators, depends on header `x-response-params`', type: object }
                   isEmptyPicklistOptionAllowed: { description: 'Defines empty picklist element availability', type: boolean, example: false }
                   referenceList: { title: 'List of related modules, available only for reference field', type: object, additionalProperties: { description: 'Tree item', type: string, example: Accounts } }
                   treeValues: { title: 'Tree items, available only for tree field', type: object, additionalProperties: { title: 'Tree item', properties: { id: { description: 'Number tree without prefix', type: integer, example: 1 }, tree: { description: 'Tree id', type: string, example: T10 }, parent: { description: 'Parent tree id', type: string, example: T1 }, text: { description: 'Tree value', type: string, example: 'Tree value' } }, type: object } }
                   defaultEditValue: { title: 'Default field value in editable format', properties: { value: { description: 'Value in editable format', type: string, example: 'Some value' }, raw: { description: 'Raw value', type: string, example: T10 } }, type: object }
                 type: object
             blocks:
-              title: 'List of all available blocks in the module'
+              title: 'List of all available blocks in the module, depends on header `x-response-params`'
               type: object
               additionalProperties:
                 title: 'Block details'
@@ -2815,7 +2810,7 @@ components:
                   name: { description: 'Block name translated into the user''s language', type: string, example: 'Informacje podstawowe o firmie' }
                 type: object
             inventory:
-              title: 'Inventory field group, available depending on the type of module'
+              title: 'Inventory field group, available depending on the type of module, depends on header `x-response-params`'
               properties:
                 '1':
                   title: 'Inventory field list'
