--- a/public_html/api/Portal.yaml
+++ b/public_html/api/Portal.yaml
@@ -2759,9 +2759,10 @@ components:
                   formats: { title: 'File Format, available only for type of field: multiImage, image', properties: { jpg: { description: 'List of file data formats', example: jpg } }, type: object }
                   id: { description: 'Field ID', type: integer, example: 24862 }
                   uitype: { description: 'Field UiType', type: integer, example: 1 }
-                  isEditable: { description: 'Check if the field is editable, depends on header `x-response-params`', type: boolean, example: true }
                   isViewable: { description: 'Check if the field is viewable, depends on header `x-response-params`', type: boolean, example: true }
                   isReadOnly: { description: 'Check if the field is read only (based on profiles), depends on header `x-response-params`', type: boolean, example: false }
+                  isCreatable: { description: 'Check if the field is creatable, depends on header `x-response-params`', type: boolean, example: true }
+                  isEditable: { description: 'Check if the field is editable, depends on header `x-response-params`', type: boolean, example: true }
                   isEditableReadOnly: { description: 'Check if the field is editable or read only (based on the field type), depends on header `x-response-params`', type: boolean, example: false }
                   isEditableHidden: { description: 'Check if the field is hidden in the edit (based on the field type), depends on header `x-response-params`', type: boolean, example: false }
                   sequence: { description: 'Sequence field', type: integer, example: 24862 }
