--- a/public_html/api/RestApi.yaml
+++ b/public_html/api/RestApi.yaml
@@ -1925,9 +1925,10 @@ components:
                   formats: { title: 'File Format, available only for type of field: multiImage, image', properties: { jpg: { description: 'List of file data formats', example: jpg } }, type: object }
                   id: { description: 'Field ID', type: integer, example: 24862 }
                   uitype: { description: 'Field UiType', type: integer, example: 1 }
-                  isEditable: { description: 'Check if the field is editable, depends on header `x-response-params`', type: boolean, example: true }
                   isViewable: { description: 'Check if the field is viewable, depends on header `x-response-params`', type: boolean, example: true }
                   isReadOnly: { description: 'Check if the field is read only (based on profiles), depends on header `x-response-params`', type: boolean, example: false }
+                  isCreatable: { description: 'Check if the field is creatable, depends on header `x-response-params`', type: boolean, example: true }
+                  isEditable: { description: 'Check if the field is editable, depends on header `x-response-params`', type: boolean, example: true }
                   isEditableReadOnly: { description: 'Check if the field is editable or read only (based on the field type), depends on header `x-response-params`', type: boolean, example: false }
                   isEditableHidden: { description: 'Check if the field is hidden in the edit (based on the field type), depends on header `x-response-params`', type: boolean, example: false }
                   sequence: { description: 'Sequence field', type: integer, example: 24862 }
@@ -1939,6 +1940,7 @@ components:
                   isEmptyPicklistOptionAllowed: { description: 'Defines empty picklist element availability', type: boolean, example: false }
                   referenceList: { title: 'List of related modules, available only for reference field', type: object, additionalProperties: { description: 'Tree item', type: string, example: Accounts } }
                   treeValues: { title: 'Tree items, available only for tree field', type: object, additionalProperties: { title: 'Tree item', properties: { id: { description: 'Number tree without prefix', type: integer, example: 1 }, tree: { description: 'Tree id', type: string, example: T10 }, parent: { description: 'Parent tree id', type: string, example: T1 }, text: { description: 'Tree value', type: string, example: 'Tree value' } }, type: object } }
+                  defaultEditValue: { title: 'Default field value in editable format', properties: { value: { description: 'Value in editable format', type: string, example: 'Some value' }, raw: { description: 'Raw value', type: string, example: T10 } }, type: object }
                 type: object
             blocks:
               title: 'List of all available blocks in the module, depends on header `x-response-params`'
