--- a/tests/setup/db/mysql_mysql8.cnf
+++ b/tests/setup/db/mysql_mysql8.cnf
@@ -33,6 +33,7 @@ interactive_timeout				= 600
 max_allowed_packet				= 128M
 query_cache_size      	  		= 128M
 innodb_lock_wait_timeout		= 600
+innodb_large_prefix 			= ON
 innodb_file_per_table 			= ON
 innodb_ft_min_token_size		= 2
 innodb_stats_on_metadata		= OFF
