tests/setup/nginx/yetiforce.conf

--- a/tests/setup/nginx/yetiforce.conf
+++ b/tests/setup/nginx/yetiforce.conf
@@ -6,6 +6,10 @@
 ##########################
 ##       Security       ##
 ##########################
+server_tokens off;
+etag off;
+
+##  nginx module: header_filter_by_lua_block
 header_filter_by_lua_block {
     ngx.header['X-Frame-Options'] = "SAMEORIGIN"
     ngx.header['X-XSS-Protection'] = "1; mode=block"
@@ -17,9 +21,21 @@ header_filter_by_lua_block {
     ngx.header['Expect-CT'] = "enforce; max-age=3600"
     ngx.header["Cache-Control"] = ngx.header["Cache-Control"];
 }
-server_tokens off;
+
+##  nginx module: headers-more-nginx-module
+# https://github.com/openresty/headers-more-nginx-module#installation
+# https://www.nginx.com/blog/compiling-dynamic-modules-nginx-plus/
 more_set_headers 'Server: ';
-etag off;
+more_set_headers 'X-Frame-Options: SAMEORIGIN';
+more_set_headers 'X-XSS-Protection: 1; mode=block';
+more_set_headers 'X-Content-Type-Options: nosniff';
+more_set_headers 'Referrer-Policy: no-referrer';
+more_set_headers 'Strict-Transport-Security: max-age=31536000; includeSubDomains; preload';
+more_set_headers 'X-Robots-Tag: none';
+more_set_headers 'X-Permitted-Cross-Domain-Policies: none';
+more_set_headers 'Expect-CT: enforce; max-age=3600';
+more_set_headers 'Cache-Control: private, no-cache, no-store, must-revalidate, post-check=0, pre-check=0';
+
 ##########################
 ##       Stability      ##
 ##########################
@@ -43,11 +59,12 @@ gzip_vary on;
 gzip_comp_level 6;
 gzip_min_length 500;
 gzip_disable "msie6";
-add_header Cache-Control "private, no-cache, no-store, must-revalidate, post-check=0, pre-check=0" always;
+#add_header Cache-Control "private, no-cache, no-store, must-revalidate, post-check=0, pre-check=0" always;
 location ~* \.(?:css(\.map)?|js(\.map)?|jpe?g|png|gif|ico|cur|heic|webp|tiff?|mp3|m4a|aac|ogg|midi?|wav|mp4|mov|webm|mpe?g|avi|ogv|flv|wmv|ttf|ttc|otf|eot|woff2?)$ {
     access_log off;
     expires 1d;
-    add_header Cache-Control public;
+    #add_header Cache-Control public;
+	more_set_headers 'Cache-Control: public';
     etag on;
 }
 ##########################
