--- a/.github/workflows/scorecards-analysis2.yml
+++ b/.github/workflows/scorecards-analysis2.yml
@@ -28,7 +28,6 @@ jobs:
 
       - name: "Run analysis"
         uses: laurentsimon/scorecard-action@feat/defbranch
-        #uses: ossf/scorecard-action@e3e75cf2ffbf9364bbff86cdbdf52b23176fe492 # v1.0.1
         with:
           results_file: results.sarif
           results_format: sarif
@@ -51,4 +50,6 @@ jobs:
 
       # Upload the results to GitHub's code scanning dashboard.
       - name: "Upload to code-scanning"
-        uses: github/codeql-action/upload
+        uses: github/codeql-action/upload-sarif@5f532563584d71fdef14ee64d17bafb34f751ce5 # v1.0.26
+        with:
+          sarif_file: results.sarif
