--- a/.github/workflows/scorecards-analysis2.yml
+++ b/.github/workflows/scorecards-analysis2.yml
@@ -5,7 +5,7 @@ on:
   schedule:
     - cron: '36 5 * * 2'
   push:
-    branches: [ stable ]
+    branches: [ developer ]
 
 # Declare default permissions as read only.
 permissions: read-all
