--- a/.github/workflows/scorecards-analysis.yml
+++ b/.github/workflows/scorecards-analysis.yml
@@ -27,7 +27,7 @@ jobs:
           persist-credentials: false
 
       - name: "Run analysis"
-        uses: laurentsimon/scorecard-action@feat/defbranch
+        uses: ossf/scorecard-action@v1.0.2
         with:
           results_file: results.sarif
           results_format: sarif
