--- a/composer.json
+++ b/composer.json
@@ -83,7 +83,8 @@
     "league/climate": "^3.6",
     "twig/twig": "^3.0",
     "illuminate/support": "^8.0",
-    "globalcitizen/php-iban": "^4.0.0"
+    "globalcitizen/php-iban": "^4.0.0",
+    "chrome-php/chrome": "^v1.4.0"
   },
   "suggest": {
     "ext-imagick": "Library recommended for securing potentially dangerous graphic files",
