--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,8 @@
     "twig/twig": "^3.0",
     "illuminate/support": "^8.0",
     "globalcitizen/php-iban": "^4.0.0",
-    "chrome-php/chrome": "^v1.4.0"
+    "chrome-php/chrome": "^v1.4.0",
+    "clegginabox/pdf-merger": "dev-master"
   },
   "suggest": {
     "ext-imagick": "Library recommended for securing potentially dangerous graphic files",
