The creation of temporary files has been improved

--- a/composer.json
+++ b/composer.json
@@ -85,7 +85,8 @@
     "illuminate/support": "^8.0",
     "globalcitizen/php-iban": "^4.0.0",
     "chrome-php/chrome": "^v1.4.0",
-    "clegginabox/pdf-merger": "dev-master"
+    "clegginabox/pdf-merger": "dev-master",
+    "symfony/filesystem": "^v5.4.3"
   },
   "suggest": {
     "ext-imagick": "Library recommended for securing potentially dangerous graphic files",
