The name of the company was changed from "YetiForce Sp. Z o.o." on "YetiForce S.A."

--- a/public_html/api/WebservicePremium.yaml
+++ b/public_html/api/WebservicePremium.yaml
@@ -2844,7 +2844,7 @@ components:
                 example: 0
               name:
                 type: string
-                example: 'YetiForce Sp. z o.o.'
+                example: 'YetiForce S.A.'
             type: object
       type: object
     BaseModule_Get_Pdf_Response:
