--- a/public_html/src/package.json
+++ b/public_html/src/package.json
@@ -1,16 +1,6 @@
 {
   "name": "YetiForceCRM",
-  "keywords": [
-    "YetiForceCRM",
-    "CRM",
-    "open source crm",
-    "best crm",
-    "YetiForce",
-    "ERP",
-    "PHP",
-    "Customer Relation Management",
-    "System CRM"
-  ],
+  "keywords": ["YetiForceCRM", "CRM", "open source crm", "best crm", "YetiForce", "ERP", "PHP", "Customer Relation Management", "System CRM"],
   "description": "An open and innovative CRM system. Our team created for you one of the most innovative CRM systems that supports mainly business processes and allows for customization according to your needs. Be ahead of your competition and implement YetiForce!",
   "repository": {
     "type": "git",
@@ -29,15 +19,7 @@
     "compile-all": "yarn run vue-lint && yarn run vue-prod && yarn run minify-js && yarn run compile-css && yarn run minify-css && yarn run compile-quasar-css",
     "watch-css": "node ./node_modules/gulp/bin/gulp.js watch-css"
   },
-  "browserslist": [
-    "safari 6",
-    "ios 7",
-    "ie 11",
-    "last 2 Chrome versions",
-    "last 2 Firefox versions",
-    "Explorer >= 11",
-    "last 1 Edge versions"
-  ],
+  "browserslist": ["safari 6", "ios 7", "ie 11", "last 2 Chrome versions", "last 2 Firefox versions", "Explorer >= 11", "last 1 Edge versions"],
   "dependencies": {
     "lodash.difference": "^4.5.0",
     "lodash.get": "^4.4.2",
@@ -46,6 +28,51 @@
     "vue-color": "^2.8.1",
     "vue-drag-resize": "https://github.com/kirillmurashov/vue-drag-resize#master",
     "vuex": "^3.6.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/eslint-parser": "^7.15.7",
+    "@babel/plugin-external-helpers": "^7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/preset-env": "^7.15.6",
+    "babel-eslint": "^10.0.2",
+    "@rollup/plugin-alias": "^3.1.5",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.5",
+    "@types/node": "^13.1.6",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "babel-plugin-minify-mangle-names": "^0.5.0",
+    "babel-preset-minify": "^0.5.1",
+    "cross-env": "^6.0.3",
+    "eslint": "^7.32.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^7.18.0",
+    "findit": "^2.0.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-stylus": "^2.7.0",
+    "postcss": "^7.0.24",
+    "prettier": "^1.19.1",
+    "rollup": "^2.57.0",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-sass": "^1.2.8",
+    "rollup-plugin-sourcemaps": "^0.6.3",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "<=5.1.5",
+    "sass": "^1.43.4",
+    "stylus": "^0.54.5",
+    "vue-template-compiler": "^2.6.10"
   },
   "bugs": {
     "url": "https://github.com/YetiForceCompany/YetiForceCRM/issues"
