--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "flag-icons": "^6.0.0",
     "floatthead": "^2.1.3",
     "footable": "^2.0.6",
-    "fullcalendar": "3.10.3",
+    "fullcalendar": "^5",
     "gantt-elastic": "^1.0.12",
     "gridstack": "^5.0.0",
     "html2canvas": "^1.0.0-alpha.12",
