--- a/.github/workflows/scorecards-analysis.yml
+++ b/.github/workflows/scorecards-analysis.yml
@@ -5,7 +5,7 @@ on:
   schedule:
     - cron: '36 5 * * 2'
   push:
-    branches: [ developer ]
+    branches: [developer]
 
 # Declare default permissions as read only.
 permissions: read-all
@@ -21,12 +21,12 @@ jobs:
       contents: read
 
     steps:
-      - name: "Checkout code"
-        uses: actions/checkout@5126516654c75f76bca1de45dd82a3006d8890f9
+      - name: 'Checkout code'
+        uses: actions/checkout@v3
         with:
           persist-credentials: false
 
-      - name: "Run analysis"
+      - name: 'Run analysis'
         uses: ossf/scorecard-action@v1.0.4
         with:
           results_file: results.sarif
@@ -41,7 +41,7 @@ jobs:
           publish_results: true
 
       # Upload the results as artifacts (optional).
-      - name: "Upload artifact"
+      - name: 'Upload artifact'
         uses: actions/upload-artifact@6673cd052c4cd6fcf4b4e6e60ea986c889389535
         with:
           name: SARIF file
@@ -49,7 +49,7 @@ jobs:
           retention-days: 5
 
       # Upload the results to GitHub's code scanning dashboard.
-      - name: "Upload to code-scanning"
+      - name: 'Upload to code-scanning'
         uses: github/codeql-action/upload-sarif@ceeddf263846258329116eb57e36db63e530c0c7 # v1.0.26
         with:
           sarif_file: results.sarif
