Added custom parameters that can affect the return value in Record api method

--- a/public_html/api/WebserviceStandard.yaml
+++ b/public_html/api/WebserviceStandard.yaml
@@ -401,6 +401,15 @@ paths:
           schema:
             type: integer
           example: 5
+        -
+          name: x-fields-params
+          in: header
+          description: 'JSON array - list of fields to be returned in the specified way'
+          required: false
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Fields-Settings'
       responses:
         '200':
           description: 'Gets data for the record'
@@ -2050,6 +2059,13 @@ components:
             description: Action
             type: boolean
       type: object
+    Fields-Settings:
+      title: 'Custom field settings'
+      description: 'A list of custom parameters that can affect the return value of a given field.'
+      type: object
+      example:
+        password:
+          showHiddenData: true
     BaseModule_Get_Record_Response:
       title: 'Base module - Response body for Record'
       description: 'Get record detail.'
