--- a/tests/setup/nginx/yetiforce.conf
+++ b/tests/setup/nginx/yetiforce.conf
@@ -11,15 +11,15 @@ etag off;
 
 ##  nginx module: header_filter_by_lua_block
 header_filter_by_lua_block {
-    ngx.header['X-Frame-Options'] = "SAMEORIGIN"
-    ngx.header['X-XSS-Protection'] = "1; mode=block"
-    ngx.header['X-Content-Type-Options'] = "nosniff"
-    ngx.header['Referrer-Policy'] = "no-referrer"
-    ngx.header['Strict-Transport-Security'] = "max-age=31536000; includeSubDomains; preload"
-    ngx.header['X-Robots-Tag'] = "none"
-    ngx.header['X-Permitted-Cross-Domain-Policies'] = "none"
-    ngx.header['Expect-CT'] = "enforce; max-age=3600"
-    ngx.header["Cache-Control"] = ngx.header["Cache-Control"];
+	ngx.header['X-Frame-Options'] = "SAMEORIGIN"
+	ngx.header['X-XSS-Protection'] = "1; mode=block"
+	ngx.header['X-Content-Type-Options'] = "nosniff"
+	ngx.header['Referrer-Policy'] = "no-referrer"
+	ngx.header['Strict-Transport-Security'] = "max-age=31536000; includeSubDomains; preload"
+	ngx.header['X-Robots-Tag'] = "none"
+	ngx.header['X-Permitted-Cross-Domain-Policies'] = "none"
+	ngx.header['Expect-CT'] = "enforce; max-age=3600"
+	ngx.header["Cache-Control"] = ngx.header["Cache-Control"];
 }
 
 ##  nginx module: headers-more-nginx-module
@@ -45,6 +45,7 @@ client_body_buffer_size 100M;
 client_body_timeout 600;
 send_timeout 600;
 fastcgi_buffers 256 256k;
+fastcgi_buffer_size 256k;
 ##########################
 ##      Performance     ##
 ##########################
@@ -61,11 +62,11 @@ gzip_min_length 500;
 gzip_disable "msie6";
 #add_header Cache-Control "private, no-cache, no-store, must-revalidate, post-check=0, pre-check=0" always;
 location ~* \.(?:css(\.map)?|js(\.map)?|jpe?g|png|gif|ico|cur|heic|webp|tiff?|mp3|m4a|aac|ogg|midi?|wav|mp4|mov|webm|mpe?g|avi|ogv|flv|wmv|ttf|ttc|otf|eot|woff2?)$ {
-    access_log off;
-    expires 1d;
-    #add_header Cache-Control public;
+	access_log off;
+	expires 1d;
+	#add_header Cache-Control public;
 	more_set_headers 'Cache-Control: public';
-    etag on;
+	etag on;
 }
 ##########################
 ##     YetiForce API    ##
