--- a/.github/workflows/doc-checker.yml
+++ b/.github/workflows/doc-checker.yml
@@ -8,7 +8,11 @@ on:
 jobs:
   phpDoc:
     runs-on: ubuntu-latest
-    name: Doc Checker
+    strategy:
+      fail-fast: false
+      matrix:
+        php: [7.4, 8.0]
+    name: Doc Checker ${{ matrix.php }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -17,7 +21,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 7.4
+          php-version: ${{ matrix.php }}
           ini-values: memory_limit=512M, xdebug.mode=off
 
       - name: wget
