--- a/.htaccess
+++ b/.htaccess
@@ -42,7 +42,7 @@ RedirectMatch 403 (?i).*\.log$
 	<IfModule mod_php5.c>
 		php_flag output_buffering On
 		php_flag always_populate_raw_post_data Off
-		php_flag mbstring.func_overload Off
+		php_flag mbstring.func_overload 0
 	</IfModule>
 </Files>
 ########################
