mbstring.func_overload

--- a/tests/setup/php/prod.ini
+++ b/tests/setup/php/prod.ini
@@ -15,7 +15,7 @@ log_errors = "On"
 max_execution_time = 600
 max_input_time = 600
 max_input_vars = 10000
-mbstring.func_overload = "Off"
+mbstring.func_overload = 0
 memory_limit = 1024M
 mysqlnd.collect_memory_statistics = "Off"
 mysqlnd.collect_statistics = "Off"
