--- a/public_html/api/SMS.yaml
+++ b/public_html/api/SMS.yaml
@@ -24,6 +24,7 @@ paths:
       tags:
         - SMSAPI
       summary: 'Receipt of SMS'
+      description: 'Add record.'
       externalDocs:
         description: 'SMSApi Documentation'
         url: 'https://www.smsapi.pl/docs'
@@ -50,6 +51,7 @@ paths:
       tags:
         - SMSAPI
       summary: 'Report for sms'
+      description: 'Update record status.'
       externalDocs:
         description: 'SMSApi Documentation'
         url: 'https://www.smsapi.pl/docs'
@@ -75,6 +77,7 @@ paths:
       tags:
         - SMSAPI
       summary: 'Report for sms'
+      description: 'Update record status.'
       externalDocs:
         description: 'SMSApi Documentation'
         url: 'https://www.smsapi.pl/docs'
