--- a/public_html/api/WebservicePremium.yaml
+++ b/public_html/api/WebservicePremium.yaml
@@ -806,6 +806,15 @@ paths:
           links:
             GetRecordById:
               $ref: '#/components/links/GetRecordById'
+        '406':
+          description: 'No input data'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Exception'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Exception'
       security:
         -
           basicAuth: []
@@ -900,6 +909,15 @@ paths:
           links:
             GetRecordById:
               $ref: '#/components/links/GetRecordById'
+        '406':
+          description: 'No input data'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Exception'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Exception'
       security:
         -
           basicAuth: []
@@ -2666,7 +2684,6 @@ components:
       type: object
     BaseModule_Get_Dashboard_Response:
       title: 'Base module - Dashboard response schema'
-      description: 'Get method - Gets widgets'' data from the dashboard.'
       properties:
         status:
           description: 'A numeric value of 0 or 1 that indicates whether the communication is valid. 1 - success , 0 - error'
@@ -2831,7 +2848,6 @@ components:
       type: object
     BaseModule_Get_Hierarchy_Response:
       title: 'Base module - Hierarchy response schema'
-      description: 'Get method - Gets records hierarchy.'
       properties:
         status:
           description: 'A numeric value of 0 or 1 that indicates whether the communication is valid. 1 - success , 0 - error'
@@ -2858,7 +2874,6 @@ components:
       type: object
     BaseModule_Get_Pdf_Response:
       title: 'Base module - Generate PDF response schema'
-      description: 'Get method - Generates and downloads a PDF file from a template.'
       properties:
         status:
           description: 'A numeric value of 0 or 1 that indicates whether the communication is valid. 1 - success , 0 - error'
@@ -2882,7 +2897,6 @@ components:
       type: object
     BaseModule_Get_PdfTemplates_Response:
       title: 'Base module - Get PDF templates list response schema'
-      description: 'Get method - Gets a list of  PDF templates.'
       properties:
         status:
           description: 'A numeric value of 0 or 1 that indicates whether the communication is valid. 1 - success , 0 - error'
@@ -2913,7 +2927,6 @@ components:
       type: object
     BaseModule_Get_Privileges_Response:
       title: 'Base module - Privileges response schema'
-      description: 'Get privileges for module.'
       properties:
         status:
           description: 'A numeric value of 0 or 1 that indicates whether the communication is valid. 1 - success , 0 - error'
@@ -2940,7 +2953,6 @@ components:
           showHiddenData: true
     BaseModule_Get_Record_Response:
       title: 'Base module - Response body for Record'
-      description: 'Get record detail.'
       required:
         - status
         - result
@@ -3399,7 +3411,6 @@ components:
       type: object
     BaseAction_SaveInventory_ResponseBodyError:
       title: 'Base module - Create inventory record response error schema'
-      description: 'Put method - A store functionality - creates a record in an advanced module (orders).'
       properties:
         errors:
           description: 'Error details'
@@ -3541,7 +3552,9 @@ components:
       type: object
     Products_Get_Record_Response:
       title: 'Base module - Response body for Record'
-      description: '{@inheritdoc}'
+      required:
+        - status
+        - result
       properties:
         status:
           description: 'A numeric value of 0 or 1 that indicates whether the communication is valid. 1 - success , 0 - error'
@@ -3550,7 +3563,12 @@ components:
             - 0
             - 1
         result:
-          description: 'Record data'
+          title: 'Record data'
+          required:
+            - name
+            - id
+            - fields
+            - data
           properties:
             name:
               description: 'Record name'
@@ -3574,7 +3592,10 @@ components:
             data:
               $ref: '#/components/schemas/Record_Display_Details'
             privileges:
-              description: 'Parameters determining checking of editing rights and moving to the trash'
+              title: 'Parameters determining checking of editing rights and moving to the trash'
+              required:
+                - isEditable
+                - moveToTrash
               properties:
                 isEditable:
                   description: 'Check if record is editable'
@@ -3651,7 +3672,6 @@ components:
       type: object
     Users_Get_AccessActivityHistory_Response:
       title: 'Users module - History of access activity data'
-      description: 'Get user history of access activity.'
       required:
         - status
         - result
@@ -3701,7 +3721,6 @@ components:
       type: object
     Users_Put_ChangePassword_Response:
       title: 'Users module - Users password change response body'
-      description: 'Put method.'
       required:
         - status
         - result
@@ -3987,7 +4006,6 @@ components:
       type: object
     Exception:
       title: 'General - Error exception'
-      description: 'Post method.'
       required:
         - status
         - error
@@ -4052,7 +4070,6 @@ components:
         menuPin: 1
     Users_Put_Preferences_Response:
       title: 'Users module - Response content of changing user settings'
-      description: 'Put method - Changes user’s preferences.'
       required:
         - status
         - result
@@ -4070,7 +4087,6 @@ components:
       type: object
     Users_Get_Record_Response:
       title: 'Users module - Response body for user'
-      description: 'Get user detail.'
       properties:
         status:
           description: 'A numeric value of 0 or 1 that indicates whether the communication is valid. 1 - success , 0 - error'
@@ -4169,7 +4185,6 @@ components:
       type: object
     Users_Post_ResetPassword_Response:
       title: 'Users module - Users password reset response body'
-      description: 'Post method.'
       required:
         - status
         - result
@@ -4211,7 +4226,6 @@ components:
       type: object
     Users_Put_ResetPassword_Response:
       title: 'Users module - Users password reset response body'
-      description: 'Put method.'
       required:
         - status
         - result
@@ -4229,7 +4243,6 @@ components:
       type: object
     Users_Get_TwoFactorAuth_Response:
       title: 'Users module - Authentication secret details'
-      description: 'Get two factor authentication details.'
       required:
         - status
         - result
