--- a/public_html/api/ManageConsents.yaml
+++ b/public_html/api/ManageConsents.yaml
@@ -24,6 +24,7 @@ paths:
       tags:
         - ApprovalsRegister
       summary: 'Adds an consent entry'
+      description: 'Add record.'
       operationId: 425399d47c958ba5c538827d258fde0a
       requestBody:
         description: 'Required data for communication'
@@ -64,6 +65,7 @@ paths:
       tags:
         - Approvals
       summary: 'Gets the list of consents'
+      description: 'Gets consents.'
       operationId: 04e7ebb08f943d466f20bb0e98311271
       parameters:
         -
@@ -149,6 +151,7 @@ paths:
       tags:
         - BaseModule
       summary: 'Gets the list of consents for specific entry'
+      description: 'Gets consents.'
       operationId: 9fd993e544cb6935282883e505b8d1d6
       parameters:
         -
@@ -197,6 +200,7 @@ paths:
       tags:
         - BaseModule
       summary: 'Send e-mail'
+      description: 'Send e-mail.'
       operationId: 86c8610aedbae9a8690ab71a3ae22134
       parameters:
         -
@@ -317,7 +321,6 @@ components:
       type: object
     Exception:
       title: 'General - Error exception'
-      description: 'Gets consents.'
       properties:
         status:
           description: '0 - error'
@@ -358,7 +361,6 @@ components:
       type: object
     BaseModule_Post_GetConsentsForEntry_Response:
       title: 'Response body for GetConsentsForEntry'
-      description: 'Gets consents.'
       properties:
         status:
           description: 'A numeric value of 0 or 1 that indicates whether the communication is valid. 1 - success , 0 - error'
@@ -394,7 +396,6 @@ components:
       type: object
     BaseModule_Post_SendEmail_Response:
       title: 'Response body for SendEmail'
-      description: 'Send e-mail.'
       properties:
         status:
           description: 'A numeric value of 0 or 1 that indicates whether the communication is valid. 1 - success , 0 - error'
