--- a/public_html/api/WebserviceStandard.yaml
+++ b/public_html/api/WebserviceStandard.yaml
@@ -495,6 +495,15 @@ paths:
           links:
             GetRecordById:
               $ref: '#/components/links/GetRecordById'
+        '406':
+          description: 'No input data'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Exception'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Exception'
       security:
         -
           basicAuth: []
@@ -589,6 +598,15 @@ paths:
           links:
             GetRecordById:
               $ref: '#/components/links/GetRecordById'
+        '406':
+          description: 'No input data'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Exception'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Exception'
       security:
         -
           basicAuth: []
@@ -1386,6 +1404,15 @@ paths:
           links:
             GetUserById:
               $ref: '#/components/links/GetUserById'
+        '406':
+          description: 'No input data'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Exception'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Exception'
       security:
         -
           basicAuth: []
@@ -2039,7 +2066,6 @@ components:
       type: object
     BaseModule_Privileges_ResponseBody:
       title: 'Base module - Privileges response schema'
-      description: 'Get privileges for module.'
       properties:
         status:
           description: 'A numeric value of 0 or 1 that indicates whether the communication is valid. 1 - success , 0 - error'
@@ -2068,7 +2094,6 @@ components:
           showHiddenData: true
     BaseModule_Get_Record_Response:
       title: 'Base module - Response body for Record'
-      description: 'Get record detail.'
       required:
         - status
         - result
@@ -2482,7 +2507,6 @@ components:
       type: object
     Users_Get_AccessActivityHistory_Response:
       title: 'Users module - History of access activity data'
-      description: 'Get user history of access activity.'
       required:
         - status
         - result
@@ -2532,7 +2556,6 @@ components:
       type: object
     Users_Put_ChangePassword_Response:
       title: 'Users module - Users password change response body'
-      description: 'Put method.'
       required:
         - status
         - result
@@ -2766,7 +2789,6 @@ components:
       type: object
     Exception:
       title: 'General - Error exception'
-      description: 'Post method.'
       required:
         - status
         - error
@@ -2826,7 +2848,6 @@ components:
       type: object
     Users_Get_Record_Response:
       title: 'Users module - Response body for user'
-      description: 'Get user detail.'
       properties:
         status:
           description: 'A numeric value of 0 or 1 that indicates whether the communication is valid. 1 - success , 0 - error'
@@ -2966,7 +2987,6 @@ components:
       type: object
     Users_Post_ResetPassword_Response:
       title: 'Users module - Users password reset response body'
-      description: 'Post method.'
       required:
         - status
         - result
@@ -3003,7 +3023,6 @@ components:
       type: object
     Users_Put_ResetPassword_Response:
       title: 'Users module - Users password reset response body'
-      description: 'Put method.'
       required:
         - status
         - result
@@ -3021,7 +3040,6 @@ components:
       type: object
     Users_Get_TwoFactorAuth_Response:
       title: 'Users module - Authentication secret details'
-      description: 'Get two factor authentication details.'
       required:
         - status
         - result
@@ -3107,9 +3125,6 @@ tags:
   -
     name: BaseAction
     description: 'Access to user methods'
-  -
-    name: Products
-    description: 'Products methods'
   -
     name: Users
     description: 'Access to user methods'
